--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   local_dir: dist
-  # A token generated on GitHub allowing Travis to push code on you repository.
+  # A token generated on GitHub allowing Travis to push code on your repository.
   # Set in the Travis settings page of your repository, as a secure variable.
   github_token: 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
   keep_history: true
